feat: implement auth endpoints and add jwt & rbac middleware
