# internal/auth/models.go
@@ -1,7 +1,7 @@
 package auth
 
 type LoginRequest struct {
-	Email    string `json:"email"`
+	Username string `json:"username"`
 	Password string `json:"password"`
 }
 
